--- a/packages/qj-bbc-mobile-materials/package.json
+++ b/packages/qj-bbc-mobile-materials/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "@brushes/simulate-component": "^0.1.35",
+    "dayjs": "^1.11.9",
     "react": "^18.2.0"
   }
 }
