--- a/packages/taro-react-user/package.json
+++ b/packages/taro-react-user/package.json
@@ -54,6 +54,7 @@
     "@tarojs/runtime": "3.6.2",
     "@tarojs/shared": "3.6.2",
     "@tarojs/taro": "3.6.2",
+    "qj-bbc-mobile-materials": "*",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "s-material-react": "^1.4.31"
