--- a/packages/taro-react-user/project.config.json
+++ b/packages/taro-react-user/project.config.json
@@ -2,7 +2,7 @@
   "miniprogramRoot": "dist/",
   "projectname": "taro-mobile-react",
   "description": "",
-  "appid": "wx195a67e3956e9501",
+  "appid": "wx2149191652390d8f",
   "setting": {
     "urlCheck": true,
     "es6": false,
