--- a/packages/qj-bbc-mobile-store/package.json
+++ b/packages/qj-bbc-mobile-store/package.json
@@ -9,6 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "lodash-es": "^4.17.21",
     "react": "^18.2.0"
+  },
+  "devDependencies": {
+    "@types/lodash-es": "^4.17.7"
   }
 }
