--- a/packages/taro-react-user/package.json
+++ b/packages/taro-react-user/package.json
@@ -56,8 +56,7 @@
     "@tarojs/taro": "3.6.2",
     "qj-bbc-mobile-materials": "*",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "s-material-react": "^1.4.31"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.21.3",
