--- a/packages/qj-bbc-mobile-store/package.json
+++ b/packages/qj-bbc-mobile-store/package.json
@@ -10,7 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "lodash-es": "^4.17.21",
-    "react": "^18.2.0"
+    "react": "^18.2.0",
+    "qj-bbc-api": "*"
   },
   "devDependencies": {
     "@types/lodash-es": "^4.17.7"
