--- a/lerna.json
+++ b/lerna.json
@@ -1,4 +1,6 @@
 {
   "$schema": "node_modules/lerna/schemas/lerna-schema.json",
-  "version": "0.0.0"
+  "useNx": true,
+  "useWorkspaces": true,
+  "version": "independent"
 }
