--- a/package.json
+++ b/package.json
@@ -4,8 +4,18 @@
   "workspaces": [
     "packages/*"
   ],
-  "dependencies": {},
+  "scripts": {
+    "start": "lerna run --parallel start"
+  },
   "devDependencies": {
-    "lerna": "^7.1.1"
+    "@types/node": ">=20.2.3",
+    "@types/react": ">=18.2.6",
+    "concurrently": "^8.0.1",
+    "lerna": "^6.6.2",
+    "prettier": "^2.8.8",
+    "typescript": ">=5.0.4"
+  },
+  "dependencies": {
+    "react-dom": "^18.2.0"
   }
 }
