--- a/packages/qj-bbc-api/package.json
+++ b/packages/qj-bbc-api/package.json
@@ -2,13 +2,18 @@
   "name": "qj-bbc-api",
   "version": "0.0.1",
   "description": "",
-  "main": "index.ts",
+  "main": "dist/index.ts",
   "scripts": {
+    "start": "tsc --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@brushes/optimize": "^1.0.5"
+  },
+  "devDependencies": {
+    "@types/node": ">18.0.0",
+    "typescript": "^4.4.4"
   }
 }
