--- a/packages/qj-bbc-mobile-store/package.json
+++ b/packages/qj-bbc-mobile-store/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "lodash-es": "^4.17.21",
     "react": "^18.2.0",
-    "qj-bbc-api": "*"
+    "qj-bbc-api": "0.0.1"
   },
   "devDependencies": {
     "@types/lodash-es": "^4.17.7"
